test/T2/Fail/T2_classInClass.ic
class S1{
	class S2{
	}
}